# ai-course-generator-backend-python-crewai

./: .gitignore  README.md  final_course_output.md  license.txt  pyproject.toml
src/ai_course_backend_crewai/: api.py  crew.py  main.py
src/ai_course_backend_crewai/config/: agents.yaml  tasks.yaml
