[project]
name = "ai_course_backend_crewai"
version = "0.1.0"
description = "ai-course-backend-crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
ai_course_backend_crewai = "ai_course_backend_crewai.main:run"
run_crew = "ai_course_backend_crewai.main:run"
train = "ai_course_backend_crewai.main:train"
replay = "ai_course_backend_crewai.main:replay"
test = "ai_course_backend_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
